# Tab5-UVC-Display

./: .gitignore  .gitmodules  README.md  sdkconfig  sdkconfig.defaults
components/dma2d_patch/: CMakeLists.txt  dma2d_hal_custom.c
components/espressif__avi_player/: avi_player.c  avifile.c
components/libjpeg-turbo/: CMakeLists.txt
main/: BridgingHeader.h  CMakeLists.txt  ControlView.swift  Main.swift  USBHost.swift  idf_component.yml
main/board/: BridgeImpl.h  M5StackTab5.swift  USBHost.swift
main/graphics/: Drawable.swift  Font.swift  MultiTouch.swift  PixelWriter.swift  Types.swift
main/platform/: BridgeImpl.h  IDF.swift  Logger.swift  Memory.swift  Queue.swift  USBHost.swift
main/platform/FreeRTOS/: Task.swift
main/platform/IDF/: IDF.swift  JPEG.swift  PPA.swift  Timer.swift
